--- a/RestaurantManager/RestaurantManager.UniversalWindows/OrderPage.xaml
+++ b/RestaurantManager/RestaurantManager.UniversalWindows/OrderPage.xaml
@@ -7,7 +7,10 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="0,33,0,0">
+        
+
         <Grid.RowDefinitions>
             <RowDefinition Height="199" />
             <RowDefinition Height="100" />
@@ -31,15 +34,25 @@
              <Run Text="Order Items:" FontSize="40
                  " />
         </TextBlock>
-        <TextBlock x:Name="textBlockAddOrder" HorizontalAlignment="Left" Margin="171,26.333,0,0"
-                   Grid.Row="4" TextWrapping="Wrap"  VerticalAlignment="Top" Width="376">
-             <Run Text="**Add To Order**" FontSize="40
-                 " />
-        </TextBlock>
-        <TextBlock x:Name="textBlockSubmit" Grid.Column="1" HorizontalAlignment="Left" Margin="171,26.333,0,0"
-                   Grid.Row="4" TextWrapping="Wrap"  VerticalAlignment="Top" Width="400" Grid.ColumnSpan="2">
-             <Run Text="**Submit Order**" FontSize="40
-                 " />
-        </TextBlock>
+        <Button x:Name="button" Content="Add To Order" HorizontalAlignment="Left" Margin="193,10.333,0,0" Grid.Row="4" VerticalAlignment="Top" Width="329" FontSize="48"/>
+        <Button x:Name="button1" Content="Submit Order
+                " Grid.Column="1" HorizontalAlignment="Left" Margin="204,10.333,0,0" Grid.Row="4" VerticalAlignment="Top" Grid.ColumnSpan="2" Width="327" FontSize="48"/>
+        <ListView x:Name="listView" HorizontalAlignment="Left" Height="492" Margin="24,26,0,0" Grid.Row="2" VerticalAlignment="Top" Width="658" Grid.RowSpan="2">
+            <ListView.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black" Offset="0"/>
+                    <GradientStop Color="#FF0B1542" Offset="1"/>
+                </LinearGradientBrush>
+            </ListView.Background>
+        </ListView>
+        <ListView x:Name="listView1" Grid.Column="2" HorizontalAlignment="Left" Height="492" Margin="29,26,0,0" Grid.Row="2" VerticalAlignment="Top" Width="296" Grid.RowSpan="2">
+            <ListView.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black" Offset="0"/>
+                    <GradientStop Color="#FF0D0A3E" Offset="1"/>
+                </LinearGradientBrush>
+            </ListView.Background>
+        </ListView>
+        <AppBarButton x:Name="appBarButton" HorizontalAlignment="Left" Icon="Home" Label="HOME" Margin="42,0,0,0" VerticalAlignment="Top" Click="appBarButton_Click"/>
     </Grid>
 </Page>
